@@ -34,20 +34,7 @@
     </stability>
     <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD License</license>
     <notes>
-- Fixed #6: PHP Tokenizer required but no error when installing.
-- Fixed #7: UnusedLocalVariable ruleset incorrectly flags variables
-  as unused when used inside double quoted string. Fixed in svn
-  revision #187.
-- Implemented #9: Add support for "Suppress warnings" annotations.
-  Implemented in svn revision #200.
-- Implemented #10: Support for exclude element in rule-set files added.
-  Implemented in svn revision #189.
-- Implemented #13: Implement naming rules, e.g. short variables, parameter
-  etc.
-- Fixed #14: ExcessivePublicCount rule should utilize PHP_Depend's cis
-  metric. Fixed in svn revision #203.
-- Fixed #15: ExcessivePublicCount rule is never used. Fixed in svn
-  revision #202.
+- E_NOTICE bug fix in naming rule.
     </notes>
     <contents>
         <dir name="/">
@@ -388,6 +375,35 @@
             <notes>
 - Small change to the command line interface, which did not return an
   exit code != 0 when an exception occured.
+            </notes>
+        </release>
+
+        <release>
+            <date>2010-03-04</date>
+            <version>
+                <release>0.2.3</release>
+                <api>0.2.3</api>
+            </version>
+            <stability>
+                <release>alpha</release>
+                <api>alpha</api>
+            </stability>
+            <license uri="http://www.opensource.org/licenses/bsd-license.php">BSD License</license>
+            <notes>
+- Fixed #6: PHP Tokenizer required but no error when installing.
+- Fixed #7: UnusedLocalVariable ruleset incorrectly flags variables
+  as unused when used inside double quoted string. Fixed in svn
+  revision #187.
+- Implemented #9: Add support for "Suppress warnings" annotations.
+  Implemented in svn revision #200.
+- Implemented #10: Support for exclude element in rule-set files added.
+  Implemented in svn revision #189.
+- Implemented #13: Implement naming rules, e.g. short variables, parameter
+  etc.
+- Fixed #14: ExcessivePublicCount rule should utilize PHP_Depend's cis
+  metric. Fixed in svn revision #203.
+- Fixed #15: ExcessivePublicCount rule is never used. Fixed in svn
+  revision #202.
             </notes>
         </release>
     </changelog>
