@@ -3,7 +3,6 @@ interface testGetParentTypeReturnsInterfaceForInterfaceMethodInterface
 {
     function testGetParentTypeReturnsInterfaceForInterfaceMethod();
 }
-<?php
 interface testGetParentTypeReturnsInterfaceForInterfaceMethodInterface
 {
     function testGetParentTypeReturnsInterfaceForInterfaceMethod();
