@@ -1,3 +1,8 @@
+phpmd-0.2.4 (2010/03/08)
+========================
+
+- E_NOTICE bug fix in naming rule.
+
 phpmd-0.2.3 (2010/03/04)
 ========================
 
